test: 서비스 단위 테스트 -> 통합 테스트